--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -410,4 +410,20 @@
 		<zType>TEXT_EFFECTPLAYER_UPKEEP_VERY_HIGH_TRAINING</zType>
 		<Translation>Sehr hohes Training</Translation>
 	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTPLAYER_UPKEEP_LOW_SCIENCE</zType>
+		<Translation>Wenig Wissenschaft</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTPLAYER_UPKEEP_MEDIUM_SCIENCE</zType>
+		<Translation>Mittlere Wissenschaft</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTPLAYER_UPKEEP_HIGH_SCIENCE</zType>
+		<Translation>Hohe Wissenschaft</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTPLAYER_UPKEEP_VERY_HIGH_SCIENCE</zType>
+		<Translation>Sehr hohe Wissenschaft</Translation>
+	</Entry>
 </Root>
